# modularexp

./: .gitignore  README.md  activation_patching_dataset_exp.pkl  activation_patching_results.json  circuit_evaluation_results.json  final_circuit.json  pyproject.toml
modularexp/: data.py  dataset.py  evaluator.py  model.py  optim.py  train.py  trainer.py  utils.py
modularexp/analysis/: deterministic.py  exp_dataset.py  exp_patching.py  exp_patching_full.py  io.py  numberwise_patching_full.py  patching.py  pca.py
modularexp/envs/: arithmetic.py  generators.py
modularexp/model/: transformer.py
modularexp/modularexp/data/: data-00000-of-00001.arrow  dataset_info.json  state.json
modularexp/plots/: base_comparison.py  count_histogram_reciprocal.py  count_histogram_uniform.py  validcomparison.py  validtestbenford.py
modularexp/plots/base/: base1000test.csv  base1000valid.csv  base1013test1.csv  base1013test2.csv  base1013valid1.csv  base1013valid2.csv  base1279test1.csv  base1279test2.csv  base1279valid1.csv  base1279valid2.csv  base999test.csv  base999valid.csv
modularexp/plots/benford/: testbenford1.csv  testbenford2.csv  validbenford1.csv  validbenford2.csv
modularexp/plots/valid/: valid23.csv  valid46.csv  valid69.csv  valid92.csv  valid_overall.csv
sweeps/: trainbases.yml  trainregular.yml  trainuniform.yml
tests/: test_fast_exp.py
